--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "rehype-slug": "^6.0.0",
     "shiki": "^1.6.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tocbot": "^4.32.2"
   },
   "devDependencies": {
     "@types/node": "^20",
