--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.379.0",
+    "mermaid": "^11.12.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
     "shiki": "^1.6.0",
+    "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tocbot": "^4.32.2"
@@ -33,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/svg-pan-zoom": "^3.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
@@ -44,5 +47,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "velite": "0.1.0-rc.3"
-  }
+  },
+  "packageManager": "pnpm@8.15.5+sha512.b051a32c7e695833b84926d3b29b8cca57254b589f0649d899c6e9d0edb670b91ec7e2a43459bae73759bb5ce619c3266f116bf931ce22d1ef1759a7e45aa96f"
 }
